🙈 Hide: Conceal Generate PO button until approval criteria are met
- Added d-none Bootstrap class to hide Generate PO button
- Added id="generatePoBtn" for easy access when showing later
- Button remains functional, just hidden from view
- Can be revealed with: document.getElementById('generatePoBtn').classList.remove('d-none')
- Will be shown after all approvers have approved the RFPO (to be implemented)

--- a/templates/admin/rfpo_edit.html
+++ b/templates/admin/rfpo_edit.html
@@ -18,8 +18,9 @@
                 <i class="fas fa-file-pdf"></i> Generate PO Proof
             </a>
             <a href="{{ url_for('rfpo_generate_po', rfpo_id=rfpo.id) }}" 
-               class="btn btn-success" target="_blank"
-               title="Generate Purchase Order PDF">
+               class="btn btn-success d-none" target="_blank"
+               title="Generate Purchase Order PDF"
+               id="generatePoBtn">
                 <i class="fas fa-file-pdf"></i> Generate PO
             </a>
         </div>
